added:Joints, search notes, TestCases for collaborator
